--- a/requirements.txt
+++ b/requirements.txt
@@ -213,6 +213,7 @@ sympy==1.11.1
 tenacity==8.2.2
 termcolor==2.1.1
 terminado==0.17.1
+textblob==0.17.1
 textstat==0.7.3
 thinc==8.1.10
 threadpoolctl==3.1.0
